# affine

./: .gitignore  CMakeLists.txt
affine/: AffineIntegrators.cpp  AffineIntegrators.hpp  AffineStressStrain.cpp  AffineStressStrain.hpp  CMakeLists.txt  affine.hpp
example_problems/: CMakeLists.txt  FungSingleInclusion.cpp  FungUniaxialExtension.cpp
problems/: CMakeLists.txt  FungArtery.cpp  FungLigament.cpp  FungSingleInclusion.cpp  FungUniaxialExtension.cpp  HyperElasticArtery.cpp  HyperElasticLigament.cpp
scripts/: FungSingleInclusion.py  FungUniaxialExtension.py  FungUniaxialWithInclusion.py  RunFungArtery.py  RunFungLigament.py  RunHyperElasticArtery.py  RunHyperElasticLigament.py  SingleInclusionMesh.py  SquareMesh.py  UnitSquareWithInclusionMesh.py
src/: TLStressStrain.cpp  TLStressStrain.hpp
